[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/objects/weapon_knife.png" type="Texture" id=1]
[ext_resource path="res://assets/new/effects_sounds/player/arrow.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/Objects/Projectiles/PlayerGun.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.3125, 2.5625 )

[node name="PlayerGun" type="Area2D" groups=["player_gun"]]
collision_layer = 4
collision_mask = 260
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
rotation = 1.5708
scale = Vector2( 0.792501, 0.792501 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.510938, 0.221875 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 300.0
bus = "Sfx"

[connection signal="area_entered" from="." to="." method="_on_PlayerGun_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerGun_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
